test/should_fail/DuplicateProperty.oj

@implementation DuplicateProperty

@property id foo;
@property id foo;

@end
